Updated to 1.8.0-TIP-RC4